added pages for vent

--- a/views/content/ventilators.ejs
+++ b/views/content/ventilators.ejs
@@ -6,26 +6,82 @@
         <div class="row product-container">
             <!-- Product Image -->
             <div class="col-md-6">
+                <img src="/Assets/images/silventvent1.jpg" alt="Product Image" class="product-image">
+            </div>
+
+            <!-- Product Details -->
+            <div class="col-md-6 product-details">
+                <h1 class="product-title">SILENT 4C TURBO D100</h1>
+                <p class="product-price"></p>
+                <p class="product-description">
+                    Вентилятор осевой вытяжной с двигателем повышеной мощностии с обратным клапаном 
+                </p>
+
+                <!-- Product Specifications -->
+                <div class="product-specs">
+                    <h4>Характеристики:</h4>
+                    <ul>        
+                        <li>Диаметр: 100 мм</li>
+                        <li>Материал: Пластик</li>
+                        <li>Цвет: Белый</li>
+                        <li>Бренд: DICITI</li>
+                    </ul>
+                </div>
+
+                  <!-- Product Specifications -->
+                  <div class="product-specs">
+                    <h4>Особенности:</h4>
+                    <ul>        
+                        <li>Надежный двигатель с шарикоподшипниками</li>
+                        <li>Прочный корпус из ABS-пластика</li>
+                        <li>Обратный клапан для предотвращения обратной тяги</li>
+                        <li>Удобная световая индикация</li>
+                        <li>Легкий монтаж с помощью саморезов</li>
+                        <li>Защита от перегрева</li>
+                        <li>Защита от воды и пыли (IP24)</li>
+                        <li>Мощный Turbo-двигатель</li>
+                    </ul>
+                </div>
+
+             
+            </div>
+        </div>
+
+
+
+        <div class="row product-container">
+            <!-- Product Image -->
+            <div class="col-md-6">
                 <img src="/Assets/images/ventik.jpeg" alt="Product Image" class="product-image">
             </div>
 
             <!-- Product Details -->
             <div class="col-md-6 product-details">
-                <h1 class="product-title">Вентилятор 2</h1>
-                <p class="product-price">2000kzt</p>
+                <h1 class="product-title">SILENT 4C TURBO D100</h1>
+                <p class="product-price"></p>
                 <p class="product-description">
-                    This is a detailed description of the product. It explains the features, benefits, and any other important information a customer needs to know before purchasing.
+                    Вентилятор осевой вытяжной с двигателем повышеной мощностии с обратным клапаном 
                 </p>
 
                 <!-- Product Specifications -->
                 <div class="product-specs">
-                    <h4>Specifications:</h4>
-                    <ul>
-                        <li>Weight: 2 kg</li>
-                        <li>Dimensions: 30x20x10 cm</li>
-                        <li>Material: Stainless Steel</li>
-                        <li>Color: Silver</li>
-                        <li>Brand: BrandName</li>
+                    <h4>Характеристики:</h4>
+                    <ul>        
+                        <li>Диаметр: 100 мм</li>
+                        <li>Материал: Пластик</li>
+                        <li>Цвет: Белый</li>
+                        <li>Бренд: DICITI</li>
+                    </ul>
+                </div>
+
+                  <!-- Product Specifications -->
+                  <div class="product-specs">
+                    <h4>Характеристики:</h4>
+                    <ul>        
+                        <li>Диаметр: 100 мм</li>
+                        <li>Материал: Пластик</li>
+                        <li>Цвет: Белый</li>
+                        <li>Бренд: DICITI</li>
                     </ul>
                 </div>
 
