--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-12 text-center">
-                <h1>Welcome to Your Store</h1>
-                <p>Explore our wide range of products below.</p>
+                <h1></h1>
+                <p></p>
             </div>
         </div>
 
@@ -17,8 +17,8 @@
                     <img src="/Assets/images/ventik2.jpeg" class="card-img-top" alt="Category Image">
                     <div class="card-body">
                         <h5 class="card-title">Вытечка</h5>
-                        <p class="card-text">Brief description of Category 1.</p>
-                        <a href="#" class="btn btn-primary">Explore</a>
+                        <p class="card-text">Все мелочи для вытечки.</p>
+                        <a href="#" class="btn btn-primary">Посмотреть</a>
                     </div>
                 </div>
             </div>
@@ -27,8 +27,8 @@
                   <img src="/Assets/images/ventik3.jpeg" class="card-img-top" alt="Category Image">
                   <div class="card-body">
                       <h5 class="card-title">Трубы</h5>
-                      <p class="card-text">Brief description of Category 1.</p>
-                      <a href="/product_vent_1" class="btn btn-primary">Explore</a>
+                      <p class="card-text">Различные трубы для вытечек</p>
+                      <a href="/product_vent_1" class="btn btn-primary">Посмотреть</a>
                   </div>
               </div>
             </div>
@@ -37,8 +37,8 @@
                 <img src="/Assets/images/ventik.jpeg" class="card-img-top" alt="Category Image">
                 <div class="card-body">
                     <h5 class="card-title">Вентиляторы</h5>
-                    <p class="card-text">Brief description of Category 1.</p>
-                    <a href="/ventilators" class="btn btn-primary">Explore</a>
+                    <p class="card-text">Различные виды вентиляторов</p>
+                    <a href="/ventilators" class="btn btn-primary">Посмотреть</a>
                 </div>
             </div>
             </div>
