--- a/Client/Content/app.css
+++ b/Client/Content/app.css
@@ -32,8 +32,8 @@
     margin-top: 30px;
 }
 .product-image {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 100%;
     border: 1px solid #ddd;
 }
 .product-details {
